# JunkCode

./: .gitignore  README.md
1.GJJContributionModule/: README.md  pom.xml
1.GJJContributionModule/docs/: project.md
1.GJJContributionModule/docs/api/: GJJ-SubSystem.postman_collection.json  GJJ-SubSystem.reqable_collection.json
1.GJJContributionModule/src/main/resources/: log4j2.xml
1.GJJContributionModule/src/main/resources/mybatis/: mybatis-config.xml
1.GJJContributionModule/src/main/resources/static/: index.html  profile.html
2.BankDeposits/: pom.xml
3.AutoDealerSM/: CMakeLists.txt
3.AutoDealerSM/documents/: 实体关系ER图.vsdx  数据库表设计.csv  数据库表设计.xlsx  系统架构图.vsdx
3.AutoDealerSM/dustbin/: task_design.md
3.AutoDealerSM/dustbin/static/: index.html  not_found.html
3.AutoDealerSM/include/: main.h
3.AutoDealerSM/include/crow_app/: admin_controller.h  api_blueprint.h  beauty_maintenance_proj_controller.h  customer_car_controller.h  customer_controller.h  employee_info_controller.h  middleware.h  parts_info_controller.h
3.AutoDealerSM/include/models/: admin_info.h  beauty_maintenance_proj.h  customer_car_info.h  customer_info.h  employee_info.h  parts_info.h
3.AutoDealerSM/include/repositories/: admin_info_dao.h  base_dao.h  beauty_maintenance_proj_dao.h  customer_car_info_dao.h  customer_info_dao.h  employee_info_dao.h  parts_info_dao.h  sqlite_connection_pool.h
3.AutoDealerSM/include/utils/: input_validator.h  password_tool.h  session_manager.h  time_id_generator.h
3.AutoDealerSM/sql/schemas/: schemas.sql
3.AutoDealerSM/sql/seeds/: test.sql
3.AutoDealerSM/src/: main.cpp
3.AutoDealerSM/src/crow_app/: admin_controller.cpp  beauty_maintenance_proj_controller.cpp  customer_car_controller.cpp  customer_controller.cpp  employee_info_controller.cpp  parts_info_controller.cpp
3.AutoDealerSM/src/models/: admin_info.cpp  beauty_maintenance_proj.cpp  customer_car_info.cpp  customer_info.cpp  employee_info.cpp  parts_info.cpp
3.AutoDealerSM/src/repositories/: admin_info_dao.cpp  base_dao.cpp  beauty_maintenance_proj_dao.cpp  customer_car_info_dao.cpp  customer_info_dao.cpp  employee_info_dao.cpp  parts_info_dao.cpp  sqlite_connection_pool.cpp
3.AutoDealerSM/src/utils/: input_validator.cpp  password_tool.cpp  session_manager.cpp  time_id_generator.cpp
4.CrowAndVueWebsites/web/backend/: CMakeLists.txt  schema.sql
4.CrowAndVueWebsites/web/backend/include/: main.h
4.CrowAndVueWebsites/web/backend/include/crow_app/: auth_controller.h  middleware.h  user_controller.h
4.CrowAndVueWebsites/web/backend/include/dao/: base_dao.h  gender_dao.h  user_dao.h
4.CrowAndVueWebsites/web/backend/include/model/: gender.h  user.h  user_type_t.h  v_user.h
4.CrowAndVueWebsites/web/backend/include/util/: security_util.h  session_manager.h
4.CrowAndVueWebsites/web/backend/src/: main.cpp
4.CrowAndVueWebsites/web/backend/src/crow_app/: auth_controller.cpp  user_controller.cpp
4.CrowAndVueWebsites/web/backend/src/dao/: base_dao.cpp  gender_dao.cpp  user_dao.cpp
4.CrowAndVueWebsites/web/backend/src/model/: gender.cpp  user.cpp  v_user.cpp
4.CrowAndVueWebsites/web/backend/src/util/: input_validator.cpp  security_util.cpp  session_manager.cpp  time_id_generator.cpp
4.CrowAndVueWebsites/web/documents/: api.md  task_demand.md
4.CrowAndVueWebsites/web/frontend/: package-lock.json  vite.config.ts
4.CrowAndVueWebsites/web/frontend/src/: App.vue
4.CrowAndVueWebsites/web/frontend/src/assets/: main.css
4.CrowAndVueWebsites/web/frontend/src/components/: AppFooter.vue  AppHeader.vue  SidebarNavigation.vue  UserStatus.vue
4.CrowAndVueWebsites/web/frontend/src/layouts/: AuthLayout.vue  DefaultLayout.vue
4.CrowAndVueWebsites/web/frontend/src/router/: index.ts
4.CrowAndVueWebsites/web/frontend/src/types/: api.ts  menu.ts
4.CrowAndVueWebsites/web/frontend/src/views/: AboutView.vue  ContactView.vue  DeleteAccount.vue  HomeView.vue  LogInView.vue  MyInfo.vue  SignUpView.vue
BankDeposits/: 要求.txt
BankDeposits/src/test/java/: TestBankSvc.java
GJJContributionModule/docs/: dependency.md  frontend.md
GJJContributionModule/sql/: 1.Schema.sql  2.TestData.sql
GJJContributionModule/src/main/resources/: application.properties
GJJContributionModule/src/main/resources/static/: dashboard.html  login.html  (+2 more)
(+91 files in other folders)
